# Payload-SDK-Sorair

./: CMakeLists.txt  build.txt
build-pizero/: CMakeCache.txt  Makefile  cmake_install.cmake
build-x86/: CMakeCache.txt  Makefile  cmake_install.cmake
toolchains/: rpi-zero-gnueabihf.cmake
